--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ant-design-vue": "^2.2.8",
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
-    "moment": "^2.29.1",
+    "dayjs": "^1.10.8",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
